--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,7 @@
 {
-	"autoload":{
-		"classmap": [
-			"C:/xampp/php/ext/Zend/Db.php",
-			"C:/xampp/php/ext/Zend/Db/Table.php",
-			"C:/xampp/php/ext/Zend/Registry.php",
-			"C:/xampp/php/ext/Zend/Paginator.php",
-			"C:/xampp/php/ext/Zend/Paginator/Adapter/Array.php",
-			"C:/xampp/php/ext/Zend/Paginator/Adapter/DbTableSelect.php"
-		]
+	"autoload":{		
+		"psr-0": {
+			"Zend_":"C:/xampp/php/ext"
+		}
 	}
 }
